--- a/src/App.scss
+++ b/src/App.scss
@@ -22,7 +22,7 @@
   -webkit-text-size-adjust: 100%;
 }
 
-div{
+div {
   display: inherit;
 }
 
@@ -35,23 +35,24 @@ div{
   // height: 100vh;
   // width: 100vw;
 
-  .thermostats{
+  .thermostats {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    gap: 32px;
+    gap: 16px;
 
     .main {
       display: flex;
       flex-direction: row;
       justify-content: center;
     }
-  
-    .secondary{
+
+    .secondary {
       display: flex;
       flex-direction: row;
+      flex-wrap: wrap;
+      justify-content: center;
       gap: 16px;
-      
     }
   }
 
@@ -66,25 +67,74 @@ div{
     border-radius: 10px;
     background-color: #f5f5f5;
     padding: 24px 80px;
-  
+
     .humidity {
       min-height: 30px;
     }
-    .setTemps{
+
+    .setTemps {
       display: flex;
       flex-direction: row;
       justify-content: space-between;
       margin-top: 16px;
       width: 100%;
+
       .coolSetPoint {
-        color:#097ebd
+        color: #097ebd
       }
+
       .heatSetPoint {
-        color:rgb(221, 39, 39)
+        color: rgb(221, 39, 39)
       }
     }
   }
-  .allmode{
+
+  .system_status {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 16px;
+    margin-top: 32px;
+
+    .title{
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      gap: 4px;
+    }
+
+    .system_statuses {
+      display: flex;
+      flex-direction: row;
+      justify-content: center;
+      gap: 16px;
+      margin-top: 16px;
+
+      .system_status_item {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        gap: 16px;
+        .system_status_item_label{
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+          justify-content: center;
+        }
+        // p {
+        //   margin: 0;
+        //   margin-block-start: 0;
+        //   margin-block-end: 0;
+        // }
+      }
+    }
+  }
+
+
+  .allmode {
     filter: saturate(.8) opacity(.5),
   }
 
@@ -102,24 +152,138 @@ h1 {
   line-height: 1.1;
 }
 
+.temp_control{
+  margin: 40px 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 16px;
+  .thermostat-form {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 24px;
+    button {
+      background-color: #007bff;
+      color: #fff;
+      border: none;
+    }
+    button:hover {
+      background-color: #0056b3;
+    }
+  }
+  
+}
+
+
+.form-group {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+label {
+  font-weight: bold;
+  margin-right: 8px;
+}
+
 button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
+  padding: 6px 20px;
+  border-radius: 5px;
+  font-size: 16px;
   cursor: pointer;
-  transition: border-color 0.25s;
+  transition: all 0.3s ease;
 }
-button:hover {
-  border-color: #646cff;
+
+.system {
+  background-color: #ffffff;
+  color: black;
+  border: 1px solid #ccc;
+  &:hover {
+    background-color: #007bff;
+    color: #fff;
+  }
 }
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+
+select.system_disabled{
+  cursor: not-allowed;
+  background-color: #eae8e8;
+  color: #737373;
 }
+
+button.system_disabled{
+  cursor: not-allowed;
+  background-color: #eae8e8;
+  color: #737373;
+  border: 1px solid #ccc;
+
+
+}
+
+.hoverable:hover{
+  border: 1px solid #007bff;
+}
+
+input[type="number"],
+select {
+  padding: 5px;
+  font-size: 16px;
+  border-radius: 5px;
+  border: 1px solid #ccc;
+  height: 32px;
+}
+
+input:hover{
+  border: 1px solid #007bff;
+}
+
+input[type="range"] {
+  width: 100%;
+  margin-top: 20px;
+  -webkit-appearance: none;
+  background-color: #ddd;
+  height: 10px;
+  border-radius: 5px;
+  outline: none;
+}
+
+input[type="range"]::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 20px;
+  height: 20px;
+  background-color: #007bff;
+  cursor: pointer;
+  border-radius: 50%;
+  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.1);
+}
+
+input[type="range"]::-webkit-slider-thumb:hover {
+  background-color: #0056b3;
+}
+
+
+// button {
+//   border-radius: 8px;
+//   border: 1px solid transparent;
+//   padding: 0.6em 1.2em;
+//   font-size: 1em;
+//   font-weight: 500;
+//   font-family: inherit;
+//   background-color: #1a1a1a;
+//   cursor: pointer;
+//   transition: border-color 0.25s;
+// }
+// button:hover {
+//   border-color: #646cff;
+// }
+// button:focus,
+// button:focus-visible {
+//   outline: 4px auto -webkit-focus-ring-color;
+// }
 
 // @media (prefers-color-scheme: light) {
 //   :root {
