moved mqtt logic to it's own HOC

--- a/src/App.scss
+++ b/src/App.scss
@@ -196,6 +196,10 @@ button {
   font-size: 16px;
   cursor: pointer;
   transition: all 0.3s ease;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 8px;
 }
 
 .system {
