--- a/src/App.scss
+++ b/src/App.scss
@@ -152,8 +152,23 @@ h1 {
   line-height: 1.1;
 }
 
+.hold_control{
+  margin-top: 24px;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  .form-group{
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+  button {
+    margin-top: 16px;
+  }
+}
+
 .temp_control{
-  margin: 40px 0;
+  margin-top: 24px;
   display: flex;
   flex-direction: column;
   align-items: center;
