--- a/src/App.scss
+++ b/src/App.scss
@@ -96,6 +96,7 @@ div {
       display: flex;
       flex-direction: row;
       justify-content: space-between;
+      align-items: center;
       margin-top: 8px;
       width: 100%;
 
